What: `protopSync` happy-path functional test added. Why: To help ensure it works as advertised.
What: Dependency locking added.
Why: To help ensure reproducibility of build.