@@ -1,7 +1,8 @@
 plugins {
-    id 'java-gradle-plugin'
     id 'com.gradle.plugin-publish' version '0.12.0'
+    id 'java-gradle-plugin'
     id 'maven-publish'
+    id 'nebula.facet' version '7.0.9'
 }
 
 group = 'io.protop'
@@ -11,6 +12,22 @@ targetCompatibility = JavaVersion.VERSION_14
 
 repositories {
     mavenCentral()
+}
+
+configurations.all {
+    resolutionStrategy.activateDependencyLocking()
+}
+
+dependencies {
+    testImplementation gradleTestKit()
+    testImplementation 'org.assertj:assertj-core:3.+'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.+'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.+'
+}
+
+dependencyLocking {
+    lockMode = LockMode.STRICT
 }
 
 pluginBundle {
@@ -26,6 +43,34 @@ gradlePlugin {
             displayName = 'Protop Gradle plugin'
             description = 'A simple plugin for using io.protop in Gradle projects.'
             implementationClass = 'io.protop.gradle.plugin.ProtopGradlePlugin'
+        }
+    }
+}
+
+facets {
+    functionalTest {
+        parentSourceSet = 'test'
+    }
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+}
+
+compileFunctionalTestJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+functionalTest {
+    final protopHome = System.getenv("PROTOP_HOME") ?: ''
+
+    jvmArgs += ['--enable-preview']
+
+    environment "PROTOP_HOME", protopHome
+
+    doFirst {
+        if (protopHome.isEmpty() || !new File(protopHome, "bin/protop").exists()) {
+            throw new GradleException("PROTOP_HOME must be defined such that `\${PROTOP_HOME}/bin/protop` exists.")
         }
     }
 }
